@@ -1,7 +1,9 @@
 package com.example.api_gateway.config;
 
 import java.util.Arrays;
+import java.util.List;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -16,13 +18,26 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 @EnableWebSecurity
 public class SecurityConfig {
 
+	@Value("${frontend.url}")
+	private String frontendUrl;
+
 	@Bean
 	public CorsConfigurationSource corsConfigurationSource() {
+		// Browser gửi origin không có trailing slash — cần strip ra
+		String prodOrigin = frontendUrl.endsWith("/")
+				? frontendUrl.substring(0, frontendUrl.length() - 1)
+				: frontendUrl;
+
 		CorsConfiguration corsConfig = new CorsConfiguration();
-		corsConfig.setAllowedOriginPatterns(Arrays.asList("*"));
+		corsConfig.setAllowedOrigins(List.of(
+				prodOrigin,              // https://bkafeteria.vercel.app
+				"http://localhost:3000", // local dev
+				"http://localhost:5173"  // vite local dev
+		));
 		corsConfig.setMaxAge(3600L);
-		corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+		corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
 		corsConfig.setAllowedHeaders(Arrays.asList("*"));
+		corsConfig.setExposedHeaders(List.of("Authorization"));
 		corsConfig.setAllowCredentials(true);
 
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
